# simple_db

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: errors.rs  lib.rs
backend/src/database/: mod.rs  page.rs  table.rs
backend/src/disk/: data_iterator.rs  def_iterator.rs  mod.rs
backend/src/fixtures/: mod.rs
backend/src/vm/: mod.rs
common/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: errors.rs  lib.rs  prompt.rs
frontend/src/command/: meta.rs  mod.rs
frontend/src/command/statement/: insert.rs  mod.rs  select.rs
frontend/src/definitions/: column.rs  mod.rs  table_definition.rs
scripts/: initial_load_student_table.sql
src/: cli.rs  help.rs  main.rs
