[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
clap = "4.5.1"
nom = "7.1.3"
serde = "1.0.196"
thiserror = "1.0.57"
frontend = {path = "../frontend"}
lazy_static = "1.4.0"
rstest = "0.18.2"
prettytable-rs = "0.10.0"
