[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
anyhow = "1.0.79"
clap = "4.5.1"
lazy_static = "1.4.0"
nom = "7.1.3"
prettytable-rs = "0.10.0"
rstest = {version = "0.18.2"}
serde = {version = "1.0.196", features = ["derive"]}
thiserror = "1.0.57"
